--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# python
+.venv/
 __pycache__/
 *.pyc
-.venv/
 .env
-# node
-node_modules/
-.next/
-out/
-# misc
-dist/
-build/
-.DS_Store
-coverage/
-htmlcov/
-site/
+*.sqlite
