--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ redis = [
   "redis>=5.0"
 ]
 sql = [
-  "sqlalchemy>=2.0"
+  "sqlalchemy>=2.0",
+  "alembic>=1.13",
+  "psycopg[binary]>=3.1",
 ]
 market = [
   "yfinance>=0.2",
