feat(order-policy, fills): embed OrderPolicy on Position; commission in fills; SELL guardrail; unique event IDs
- Domain: add OrderPolicy (min_qty, min_notional, lot_size, qty_step, action_below_min) with rounding/clamping helpers.
- DTOs: FillOrderRequest supports commission (default 0.0); CreatePositionRequest accepts order_policy.
- Use case: ExecuteOrderUC enforces below-min policy (reject/hold), applies commission, adds SELL insufficient-qty guardrail.
- Persistence: positions.* add op_* columns; orders.idempotency_key is NOT NULL; events use unique IDs.
- API: health at /v1/healthz; OpenAPI updated.
- Tests: adjusted for commission and idempotency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,10 +41,11 @@ addopts = "-q"
 
 [tool.mypy]
 python_version = "3.12"
-mypy_path = ["backend"]           # tell mypy our source root
+mypy_path = "backend"
+strict_optional = true
 namespace_packages = true
 explicit_package_bases = true
-warn_unused_ignores = true
+warn_unused_ignores = true 
 
 # Be strict on our app code by default; we’ll relax 3rd-party+tests below
 check_untyped_defs = true
