--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ redis = [
   "redis>=5.0"
 ]
 sql = [
-  "sqlalchemy>=2.0"
+  "sqlalchemy>=2.0",
+  "alembic>=1.13",
+  "psycopg[binary]>=3.1",
 ]
 market = [
   "yfinance>=0.2",
@@ -39,10 +41,11 @@ addopts = "-q"
 
 [tool.mypy]
 python_version = "3.12"
-mypy_path = ["backend"]           # tell mypy our source root
+mypy_path = "backend"
+strict_optional = true
 namespace_packages = true
 explicit_package_bases = true
-warn_unused_ignores = true
+warn_unused_ignores = true 
 
 # Be strict on our app code by default; we’ll relax 3rd-party+tests below
 check_untyped_defs = true
