Fix test failures: Add missing clock parameter to ExecuteOrderUC constructor calls
- Fixed ExecuteOrderUC constructor calls in test_order_policy_uc.py to include required clock parameter
- All tests now pass successfully
- Resolved database lock issues by using memory persistence for testing

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,18 @@
 [mypy]
 python_version = 3.12
 mypy_path = backend
+strict = True
+ignore_missing_imports = False
+explicit_package_bases = True
+namespace_packages = True
+warn_unused_ignores = True
+disallow_untyped_defs = True
+disallow_untyped_decorators = False
+# Skip tests for now (keeps mypy focused on prod code)
+exclude = ^backend/tests/
 
+
+# Third-party libs: let them be Any so your code stays typed
 [mypy-fastapi.*]
 ignore_missing_imports = True
 [mypy-uvicorn.*]
@@ -13,4 +24,6 @@ ignore_missing_imports = True
 [mypy-pydantic.*]
 ignore_missing_imports = True
 [mypy-pytest]
+ignore_missing_imports = True
+[mypy-starlette.*]
 ignore_missing_imports = True
