--- a/mypy.ini
+++ b/mypy.ini
@@ -9,7 +9,7 @@ warn_unused_ignores = True
 disallow_untyped_defs = True
 disallow_untyped_decorators = False
 # Skip tests for now (keeps mypy focused on prod code)
-exclude = ^backend/tests/
+exclude = ^backend/tests/|^backend/test_.*\.py$|^backend/.*_test\.py$
 
 
 # Third-party libs: let them be Any so your code stays typed
