--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,2 @@
-alembic==1.13.2
-annotated-types==0.7.0
-anyio==4.10.0
-black==25.1.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.2.1
-coverage==7.10.5
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.116.1
-fastapi-cli==0.0.8
-greenlet==3.2.4
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
-Jinja2==3.1.6
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mypy==1.17.1
-mypy_extensions==1.1.0
-orjson==3.11.2
-packaging==25.0
-pathspec==0.12.1
-platformdirs==4.3.8
-pluggy==1.6.0
-psycopg==3.2.9
-psycopg-binary==3.2.9
-psycopg2-binary==2.9.9
-pydantic==2.7.4
-pydantic_core==2.18.4
-Pygments==2.19.2
-pytest==8.4.1
-pytest-cov==5.0.0
-python-dotenv==1.0.1
-python-multipart==0.0.20
-PyYAML==6.0.2
-redis==5.0.7
-requests==2.32.3
-rich==14.1.0
-rich-toolkit==0.15.0
-ruff==0.5.6
-shellingham==1.5.4
-sniffio==1.3.1
-SQLAlchemy==2.0.32
-starlette==0.47.3
-typer==0.16.1
-typing_extensions==4.14.1
-ujson==5.11.0
-urllib3==2.5.0
-uvicorn==0.30.0
-uvloop==0.21.0
--e git+https://github.com/iharari2/Volatility-Balancing.git@c0cc6310ee99f7b7648c5632559b17e12a505464#egg=volatility_balancing
-watchfiles==1.1.0
-websockets==15.0.1
+-r requirements-base.txt
+-e .
