Gate1: deterministic async trading loop, guardrail normalization, and stable integration tests
- Async-safe tick and health endpoints (avoid anyio threadpool hangs)
- Deterministic market data path for offline testing
- Guardrail percentage normalization across repos
- Explicit SKIP semantics for blocked trades
- Timeline persistence hardened (datetime-safe serialization)
- Gate1 deterministic integration tests and async client coverage

All unit and Gate1 integration tests passing

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,10 @@
 testpaths = backend/tests
 pythonpath = .
 # ignore WIP suites
-addopts = --tb=short
+addopts = --tb=short -m "not e2e and not online"
+markers =
+    e2e: requires a live server and real network access
+    online: requires live network access (market data, exports)
 # Suppress deprecation warnings from third-party libraries
 filterwarnings =
     ignore::DeprecationWarning:openpyxl.*
