--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,33 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: app
-    ports: ["127.0.0.1:5432:5432"]
+    ports:
+      - '127.0.0.1:5432:5432'
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   redis:
     image: redis:7
-    ports: ["127.0.0.1:6379:6379"]
+    ports:
+      - '127.0.0.1:6379:6379'
+
+  backend:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    environment:
+      # Add your DB/Redis env vars here, example:
+      # DATABASE_URL: postgresql://postgres:postgres@postgres:5432/app
+      # REDIS_URL: redis://redis:6379/0
+      PYTHONUNBUFFERED: '1'
+    ports:
+      - '8000:8000'
+      - '5174:5174'
+    depends_on:
+      - postgres
+      - redis
+    # Dev override (optional):
+    # command: ["python","-m","uvicorn","--app-dir","backend","app.main:app","--reload","--host","0.0.0.0","--port","8000"]
+
+volumes:
+  pgdata:
